CompilerDependencies/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOKED
    CONST
    LENGHTERROR
    VARERROR
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> const_block main_proc
Rule 2     const_block -> const const const const const block
Rule 3     block -> procedure block
Rule 4     block -> global block
Rule 5     block -> empty
Rule 6     alt_block -> alt_content alt_block
Rule 7     alt_block -> empty
Rule 8     alt_content -> instruction
Rule 9     alt_content -> assignment
Rule 10    instruction -> function
Rule 11    instruction -> consult SEMICOLON
Rule 12    instruction -> cycle
Rule 13    instruction -> statement
Rule 14    global -> assignment
Rule 15    global_call -> GLOBAL global_term SEMICOLON global_call
Rule 16    global_call -> empty
Rule 17    global_term -> ID COMMA global_term
Rule 18    global_term -> ID
Rule 19    assignment -> identifier ASSIGN a_content SEMICOLON
Rule 20    assignment -> identifier COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON
Rule 21    function -> type
Rule 22    function -> insert
Rule 23    function -> del
Rule 24    function -> len
Rule 25    function -> neg
Rule 26    function -> t_f
Rule 27    function -> blink
Rule 28    function -> delay
Rule 29    function -> shape
Rule 30    function -> delete
Rule 31    function -> call
Rule 32    type -> TYPE LPARENT identifier RPARENT SEMICOLON
Rule 33    a_content -> RANGE LPARENT iterable COMMA value RPARENT
Rule 34    insert -> identifier DOT INSERT LPARENT i_content RPARENT SEMICOLON
Rule 35    del -> identifier DOT DEL LPARENT iterable RPARENT SEMICOLON
Rule 36    len -> LEN LPARENT identifier RPARENT SEMICOLON
Rule 37    neg -> identifier DOT NEG SEMICOLON
Rule 38    t_f -> identifier DOT tf SEMICOLON
Rule 39    blink -> BLINK LPARENT b_content RPARENT SEMICOLON
Rule 40    delay -> DELAY LPARENT d_content RPARENT SEMICOLON
Rule 41    shape_arg -> SHAPEF
Rule 42    shape_arg -> SHAPEC
Rule 43    shape_arg -> SHAPEA
Rule 44    shape -> identifier DOT shape_arg SEMICOLON
Rule 45    delete -> identifier DOT DELETE LPARENT indice COMMA INT RPARENT SEMICOLON
Rule 46    call -> CALL proc_dec SEMICOLON
Rule 47    cycle -> for
Rule 48    for -> FOR ID IN iterable step LCORCH alt_block RCORCH SEMICOLON
Rule 49    step -> STEP INT
Rule 50    step -> empty
Rule 51    statement -> IF LPARENT iterable relation bif_value RPARENT LCORCH alt_block RCORCH SEMICOLON opt_statement
Rule 52    opt_statement -> ELSE LCORCH alt_block RCORCH SEMICOLON
Rule 53    opt_statement -> empty
Rule 54    procedure -> PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
Rule 55    proc_dec -> proc_name LPARENT parameter RPARENT
Rule 56    proc_name -> ID
Rule 57    parameter -> proc_param
Rule 58    parameter -> proc_param COMMA parameter
Rule 59    parameter -> empty
Rule 60    proc_param -> ID
Rule 61    body -> global_call BEGIN alt_block END SEMICOLON
Rule 62    main_proc -> MAIN LPARENT RPARENT LCORCH main_body RCORCH SEMICOLON block
Rule 63    main_body -> BEGIN main_block END SEMICOLON
Rule 64    main_block -> instruction main_block
Rule 65    main_block -> empty
Rule 66    arithmetic -> term
Rule 67    arithmetic -> adding_operator term
Rule 68    arithmetic -> arithmetic adding_operator term
Rule 69    term -> factor
Rule 70    term -> term multiplying_operator factor
Rule 71    factor -> INT
Rule 72    factor -> ID
Rule 73    factor -> LPARENT arithmetic RPARENT
Rule 74    const -> TIMER ASSIGN INT SEMICOLON
Rule 75    const -> RANGOTIMER ASSIGN time_mes SEMICOLON
Rule 76    const -> dimension ASSIGN INT SEMICOLON
Rule 77    const -> CUBO ASSIGN INT SEMICOLON
Rule 78    a_content -> value
Rule 79    a_content -> arithmetic
Rule 80    a_content -> list
Rule 81    a_content -> mat
Rule 82    a_content -> 3dmat
Rule 83    a_content -> consult
Rule 84    b_content -> identifier COMMA INT COMMA time_mes COMMA value
Rule 85    b_content -> identifier COMMA value
Rule 86    d_content -> empty
Rule 87    d_content -> INT COMMA time_mes
Rule 88    tf -> T
Rule 89    tf -> F
Rule 90    i_content -> iterable COMMA value
Rule 91    i_content -> list COMMA INT i_ind
Rule 92    list -> PARENTCL list_term PARENTCR
Rule 93    list -> PARENTCL empty PARENTCR
Rule 94    list_term -> list_value COMMA list_term
Rule 95    list_term -> list_value
Rule 96    list_value -> value
Rule 97    mat -> PARENTCL mat_term PARENTCR
Rule 98    mat_term -> mat_value COMMA mat_term
Rule 99    mat_term -> mat_value
Rule 100   mat_value -> list
Rule 101   3dmat -> PARENTCL 3dmat_term PARENTCR
Rule 102   3dmat_term -> 3dmat_value COMMA 3dmat_term
Rule 103   3dmat_term -> 3dmat_value
Rule 104   3dmat_value -> mat
Rule 105   consult -> list_consult
Rule 106   consult -> mat_consult
Rule 107   consult -> 3dmat_consult
Rule 108   list_consult -> ID list_consultT
Rule 109   list_consultT -> PARENTCL indice PARENTCR
Rule 110   list_consultT -> PARENTCL indice TP indice PARENTCR
Rule 111   mat_consult -> ID mat_consultT
Rule 112   mat_consultT -> PARENTCL indice COMMA indice PARENTCR
Rule 113   mat_consultT -> PARENTCL TP COMMA indice PARENTCR
Rule 114   mat_consultT -> PARENTCL TP PARENTCR list_consultT
Rule 115   mat_consultT -> PARENTCL indice PARENTCR list_consultT
Rule 116   3dmat_consult -> ID 3dmat_consultT
Rule 117   3dmat_consultT -> PARENTCL indice COMMA indice COMMA indice PARENTCR
Rule 118   3dmat_consultT -> PARENTCL indice PARENTCR mat_consultT
Rule 119   indice -> INT
Rule 120   indice -> ID
Rule 121   i_ind -> COMMA iterable
Rule 122   i_ind -> empty
Rule 123   dimension -> DIMFILAS
Rule 124   dimension -> DIMCOLUMNAS
Rule 125   time_mes -> QUOTES MIL QUOTES
Rule 126   time_mes -> QUOTES MIN QUOTES
Rule 127   time_mes -> QUOTES SEG QUOTES
Rule 128   adding_operator -> PLUS
Rule 129   adding_operator -> MINUS
Rule 130   multiplying_operator -> TIMES
Rule 131   multiplying_operator -> EXP
Rule 132   multiplying_operator -> DIVIDE
Rule 133   multiplying_operator -> DIVENT
Rule 134   multiplying_operator -> MOD
Rule 135   value -> FALSE
Rule 136   value -> TRUE
Rule 137   bif_value -> value
Rule 138   bif_value -> arithmetic
Rule 139   relation -> ASSIGN
Rule 140   relation -> NE
Rule 141   relation -> LT
Rule 142   relation -> GT
Rule 143   relation -> LTE
Rule 144   relation -> GTE
Rule 145   relation -> COMPARE
Rule 146   identifier -> ID
Rule 147   identifier -> consult
Rule 148   iterable -> identifier
Rule 149   iterable -> INT
Rule 150   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 19 20 74 75 76 77 139
BEGIN                : 61 63
BLINK                : 39
BOOKED               : 
CALL                 : 46
COMMA                : 17 20 20 33 45 58 84 84 84 85 87 90 91 94 98 102 112 113 117 117 121
COMPARE              : 145
CONST                : 
CUBO                 : 77
DEL                  : 35
DELAY                : 40
DELETE               : 45
DIMCOLUMNAS          : 124
DIMFILAS             : 123
DIVENT               : 133
DIVIDE               : 132
DOT                  : 34 35 37 38 44 45
ELSE                 : 52
END                  : 61 63
EXP                  : 131
F                    : 89
FALSE                : 135
FOR                  : 48
GLOBAL               : 15
GT                   : 142
GTE                  : 144
ID                   : 17 18 48 56 60 72 108 111 116 120 146
IF                   : 51
IN                   : 48
INSERT               : 34
INT                  : 45 49 71 74 76 77 84 87 91 119 149
LCORCH               : 48 51 52 54 62
LEN                  : 36
LENGHTERROR          : 
LPARENT              : 32 33 34 35 36 39 40 45 51 55 62 73
LT                   : 141
LTE                  : 143
MAIN                 : 62
MIL                  : 125
MIN                  : 126
MINUS                : 129
MOD                  : 134
NE                   : 140
NEG                  : 37
PARENTCL             : 92 93 97 101 109 110 112 113 114 115 117 118
PARENTCR             : 92 93 97 101 109 110 112 113 114 115 117 118
PLUS                 : 128
PROCEDURE            : 54
QUOTES               : 125 125 126 126 127 127
RANGE                : 33
RANGOTIMER           : 75
RCORCH               : 48 51 52 54 62
RPARENT              : 32 33 34 35 36 39 40 45 51 55 62 73
SEG                  : 127
SEMICOLON            : 11 15 19 20 32 34 35 36 37 38 39 40 44 45 46 48 51 52 54 61 62 63 74 75 76 77
SHAPEA               : 43
SHAPEC               : 42
SHAPEF               : 41
STEP                 : 49
T                    : 88
TIMER                : 74
TIMES                : 130
TP                   : 110 113 114
TRUE                 : 136
TYPE                 : 32
VARERROR             : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

3dmat                : 82
3dmat_consult        : 107
3dmat_consultT       : 116
3dmat_term           : 101 102
3dmat_value          : 102 103
a_content            : 19 20 20
adding_operator      : 67 68
alt_block            : 6 48 51 52 61
alt_content          : 6
arithmetic           : 68 73 79 138
assignment           : 9 14
b_content            : 39
bif_value            : 51
blink                : 27
block                : 2 3 4 62
body                 : 54
call                 : 31
const                : 2 2 2 2 2
const_block          : 1
consult              : 11 83 147
cycle                : 12
d_content            : 40
del                  : 23
delay                : 28
delete               : 30
dimension            : 76
empty                : 5 7 16 50 53 59 65 86 93 122
factor               : 69 70
for                  : 47
function             : 10
global               : 4
global_call          : 15 61
global_term          : 15 17
i_content            : 34
i_ind                : 91
identifier           : 19 20 20 32 34 35 36 37 38 44 45 84 85 148
indice               : 45 109 110 110 112 112 113 115 117 117 117 118
insert               : 22
instruction          : 8 64
iterable             : 33 35 48 51 90 121
len                  : 24
list                 : 80 91 100
list_consult         : 105
list_consultT        : 108 114 115
list_term            : 92 94
list_value           : 94 95
main_block           : 63 64
main_body            : 62
main_proc            : 1
mat                  : 81 104
mat_consult          : 106
mat_consultT         : 111 118
mat_term             : 97 98
mat_value            : 98 99
multiplying_operator : 70
neg                  : 25
opt_statement        : 51
parameter            : 55 58
proc_dec             : 46 54
proc_name            : 55
proc_param           : 57 58
procedure            : 3
program              : 0
relation             : 51
shape                : 29
shape_arg            : 44
statement            : 13
step                 : 48
t_f                  : 26
term                 : 66 67 68 70
tf                   : 38
time_mes             : 75 84 87
type                 : 21
value                : 33 78 84 85 90 96 137

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . const_block main_proc
    (2) const_block -> . const const const const const block
    (74) const -> . TIMER ASSIGN INT SEMICOLON
    (75) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (76) const -> . dimension ASSIGN INT SEMICOLON
    (77) const -> . CUBO ASSIGN INT SEMICOLON
    (123) dimension -> . DIMFILAS
    (124) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    program                        shift and go to state 1
    const_block                    shift and go to state 2
    const                          shift and go to state 3
    dimension                      shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> const_block . main_proc
    (62) main_proc -> . MAIN LPARENT RPARENT LCORCH main_body RCORCH SEMICOLON block

    MAIN            shift and go to state 11

    main_proc                      shift and go to state 10

state 3

    (2) const_block -> const . const const const const block
    (74) const -> . TIMER ASSIGN INT SEMICOLON
    (75) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (76) const -> . dimension ASSIGN INT SEMICOLON
    (77) const -> . CUBO ASSIGN INT SEMICOLON
    (123) dimension -> . DIMFILAS
    (124) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 12
    dimension                      shift and go to state 6

state 4

    (74) const -> TIMER . ASSIGN INT SEMICOLON

    ASSIGN          shift and go to state 13


state 5

    (75) const -> RANGOTIMER . ASSIGN time_mes SEMICOLON

    ASSIGN          shift and go to state 14


state 6

    (76) const -> dimension . ASSIGN INT SEMICOLON

    ASSIGN          shift and go to state 15


state 7

    (77) const -> CUBO . ASSIGN INT SEMICOLON

    ASSIGN          shift and go to state 16


state 8

    (123) dimension -> DIMFILAS .

    ASSIGN          reduce using rule 123 (dimension -> DIMFILAS .)


state 9

    (124) dimension -> DIMCOLUMNAS .

    ASSIGN          reduce using rule 124 (dimension -> DIMCOLUMNAS .)


state 10

    (1) program -> const_block main_proc .

    $end            reduce using rule 1 (program -> const_block main_proc .)


state 11

    (62) main_proc -> MAIN . LPARENT RPARENT LCORCH main_body RCORCH SEMICOLON block

    LPARENT         shift and go to state 17


state 12

    (2) const_block -> const const . const const const block
    (74) const -> . TIMER ASSIGN INT SEMICOLON
    (75) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (76) const -> . dimension ASSIGN INT SEMICOLON
    (77) const -> . CUBO ASSIGN INT SEMICOLON
    (123) dimension -> . DIMFILAS
    (124) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 18
    dimension                      shift and go to state 6

state 13

    (74) const -> TIMER ASSIGN . INT SEMICOLON

    INT             shift and go to state 19


state 14

    (75) const -> RANGOTIMER ASSIGN . time_mes SEMICOLON
    (125) time_mes -> . QUOTES MIL QUOTES
    (126) time_mes -> . QUOTES MIN QUOTES
    (127) time_mes -> . QUOTES SEG QUOTES

    QUOTES          shift and go to state 21

    time_mes                       shift and go to state 20

state 15

    (76) const -> dimension ASSIGN . INT SEMICOLON

    INT             shift and go to state 22


state 16

    (77) const -> CUBO ASSIGN . INT SEMICOLON

    INT             shift and go to state 23


state 17

    (62) main_proc -> MAIN LPARENT . RPARENT LCORCH main_body RCORCH SEMICOLON block

    RPARENT         shift and go to state 24


state 18

    (2) const_block -> const const const . const const block
    (74) const -> . TIMER ASSIGN INT SEMICOLON
    (75) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (76) const -> . dimension ASSIGN INT SEMICOLON
    (77) const -> . CUBO ASSIGN INT SEMICOLON
    (123) dimension -> . DIMFILAS
    (124) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 25
    dimension                      shift and go to state 6

state 19

    (74) const -> TIMER ASSIGN INT . SEMICOLON

    SEMICOLON       shift and go to state 26


state 20

    (75) const -> RANGOTIMER ASSIGN time_mes . SEMICOLON

    SEMICOLON       shift and go to state 27


state 21

    (125) time_mes -> QUOTES . MIL QUOTES
    (126) time_mes -> QUOTES . MIN QUOTES
    (127) time_mes -> QUOTES . SEG QUOTES

    MIL             shift and go to state 28
    MIN             shift and go to state 29
    SEG             shift and go to state 30


state 22

    (76) const -> dimension ASSIGN INT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 23

    (77) const -> CUBO ASSIGN INT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 24

    (62) main_proc -> MAIN LPARENT RPARENT . LCORCH main_body RCORCH SEMICOLON block

    LCORCH          shift and go to state 33


state 25

    (2) const_block -> const const const const . const block
    (74) const -> . TIMER ASSIGN INT SEMICOLON
    (75) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (76) const -> . dimension ASSIGN INT SEMICOLON
    (77) const -> . CUBO ASSIGN INT SEMICOLON
    (123) dimension -> . DIMFILAS
    (124) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 34
    dimension                      shift and go to state 6

state 26

    (74) const -> TIMER ASSIGN INT SEMICOLON .

    TIMER           reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    RANGOTIMER      reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    CUBO            reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    DIMFILAS        reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    PROCEDURE       reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    ID              reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)
    MAIN            reduce using rule 74 (const -> TIMER ASSIGN INT SEMICOLON .)


state 27

    (75) const -> RANGOTIMER ASSIGN time_mes SEMICOLON .

    TIMER           reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    RANGOTIMER      reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    CUBO            reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    DIMFILAS        reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    PROCEDURE       reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    ID              reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    MAIN            reduce using rule 75 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)


state 28

    (125) time_mes -> QUOTES MIL . QUOTES

    QUOTES          shift and go to state 35


state 29

    (126) time_mes -> QUOTES MIN . QUOTES

    QUOTES          shift and go to state 36


state 30

    (127) time_mes -> QUOTES SEG . QUOTES

    QUOTES          shift and go to state 37


state 31

    (76) const -> dimension ASSIGN INT SEMICOLON .

    TIMER           reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    RANGOTIMER      reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    CUBO            reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    DIMFILAS        reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    PROCEDURE       reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    ID              reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)
    MAIN            reduce using rule 76 (const -> dimension ASSIGN INT SEMICOLON .)


state 32

    (77) const -> CUBO ASSIGN INT SEMICOLON .

    TIMER           reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    RANGOTIMER      reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    CUBO            reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    DIMFILAS        reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    PROCEDURE       reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    ID              reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)
    MAIN            reduce using rule 77 (const -> CUBO ASSIGN INT SEMICOLON .)


state 33

    (62) main_proc -> MAIN LPARENT RPARENT LCORCH . main_body RCORCH SEMICOLON block
    (63) main_body -> . BEGIN main_block END SEMICOLON

    BEGIN           shift and go to state 39

    main_body                      shift and go to state 38

state 34

    (2) const_block -> const const const const const . block
    (3) block -> . procedure block
    (4) block -> . global block
    (5) block -> . empty
    (54) procedure -> . PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
    (14) global -> . assignment
    (150) empty -> .
    (19) assignment -> . identifier ASSIGN a_content SEMICOLON
    (20) assignment -> . identifier COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON
    (146) identifier -> . ID
    (147) identifier -> . consult
    (105) consult -> . list_consult
    (106) consult -> . mat_consult
    (107) consult -> . 3dmat_consult
    (108) list_consult -> . ID list_consultT
    (111) mat_consult -> . ID mat_consultT
    (116) 3dmat_consult -> . ID 3dmat_consultT

    PROCEDURE       shift and go to state 44
    MAIN            reduce using rule 150 (empty -> .)
    ID              shift and go to state 47

    block                          shift and go to state 40
    procedure                      shift and go to state 41
    global                         shift and go to state 42
    empty                          shift and go to state 43
    assignment                     shift and go to state 45
    identifier                     shift and go to state 46
    consult                        shift and go to state 48
    list_consult                   shift and go to state 49
    mat_consult                    shift and go to state 50
    3dmat_consult                  shift and go to state 51

state 35

    (125) time_mes -> QUOTES MIL QUOTES .

    SEMICOLON       reduce using rule 125 (time_mes -> QUOTES MIL QUOTES .)
    RPARENT         reduce using rule 125 (time_mes -> QUOTES MIL QUOTES .)
    COMMA           reduce using rule 125 (time_mes -> QUOTES MIL QUOTES .)


state 36

    (126) time_mes -> QUOTES MIN QUOTES .

    SEMICOLON       reduce using rule 126 (time_mes -> QUOTES MIN QUOTES .)
    RPARENT         reduce using rule 126 (time_mes -> QUOTES MIN QUOTES .)
    COMMA           reduce using rule 126 (time_mes -> QUOTES MIN QUOTES .)


state 37

    (127) time_mes -> QUOTES SEG QUOTES .

    SEMICOLON       reduce using rule 127 (time_mes -> QUOTES SEG QUOTES .)
    RPARENT         reduce using rule 127 (time_mes -> QUOTES SEG QUOTES .)
    COMMA           reduce using rule 127 (time_mes -> QUOTES SEG QUOTES .)


state 38

    (62) main_proc -> MAIN LPARENT RPARENT LCORCH main_body . RCORCH SEMICOLON block

    RCORCH          shift and go to state 52


state 39

    (63) main_body -> BEGIN . main_block END SEMICOLON
    (64) main_block -> . instruction main_block
    (65) main_block -> . empty
    (10) instruction -> . function
    (11) instruction -> . consult SEMICOLON
    (12) instruction -> . cycle
    (13) instruction -> . statement
    (150) empty -> .
    (21) function -> . type
    (22) function -> . insert
    (23) function -> . del
    (24) function -> . len
    (25) function -> . neg
    (26) function -> . t_f
    (27) function -> . blink
    (28) function -> . delay
    (29) function -> . shape
    (30) function -> . delete
    (31) function -> . call
    (105) consult -> . list_consult
    (106) consult -> . mat_consult
    (107) consult -> . 3dmat_consult
    (47) cycle -> . for
    (51) statement -> . IF LPARENT iterable relation bif_value RPARENT LCORCH alt_block RCORCH SEMICOLON opt_statement
    (32) type -> . TYPE LPARENT identifier RPARENT SEMICOLON
    (34) insert -> . identifier DOT INSERT LPARENT i_content RPARENT SEMICOLON
    (35) del -> . identifier DOT DEL LPARENT iterable RPARENT SEMICOLON
    (36) len -> . LEN LPARENT identifier RPARENT SEMICOLON
    (37) neg -> . identifier DOT NEG SEMICOLON
    (38) t_f -> . identifier DOT tf SEMICOLON
    (39) blink -> . BLINK LPARENT b_content RPARENT SEMICOLON
    (40) delay -> . DELAY LPARENT d_content RPARENT SEMICOLON
    (44) shape -> . identifier DOT shape_arg SEMICOLON
    (45) delete -> . identifier DOT DELETE LPARENT indice COMMA INT RPARENT SEMICOLON
    (46) call -> . CALL proc_dec SEMICOLON
    (108) list_consult -> . ID list_consultT
    (111) mat_consult -> . ID mat_consultT
    (116) 3dmat_consult -> . ID 3dmat_consultT
    (48) for -> . FOR ID IN iterable step LCORCH alt_block RCORCH SEMICOLON
    (146) identifier -> . ID
    (147) identifier -> . consult

    END             reduce using rule 150 (empty -> .)
    IF              shift and go to state 72
    TYPE            shift and go to state 73
    LEN             shift and go to state 75
    BLINK           shift and go to state 76
    DELAY           shift and go to state 77
    CALL            shift and go to state 78
    ID              shift and go to state 79
    FOR             shift and go to state 80

    main_block                     shift and go to state 53
    instruction                    shift and go to state 54
    empty                          shift and go to state 55
    function                       shift and go to state 56
    consult                        shift and go to state 57
    cycle                          shift and go to state 58
    statement                      shift and go to state 59
    type                           shift and go to state 60
    insert                         shift and go to state 61
    del                            shift and go to state 62
    len                            shift and go to state 63
    neg                            shift and go to state 64
    t_f                            shift and go to state 65
    blink                          shift and go to state 66
    delay                          shift and go to state 67
    shape                          shift and go to state 68
    delete                         shift and go to state 69
    call                           shift and go to state 70
    list_consult                   shift and go to state 49
    mat_consult                    shift and go to state 50
    3dmat_consult                  shift and go to state 51
    for                            shift and go to state 71
    identifier                     shift and go to state 74

state 40

    (2) const_block -> const const const const const block .

    MAIN            reduce using rule 2 (const_block -> const const const const const block .)


state 41

    (3) block -> procedure . block
    (3) block -> . procedure block
    (4) block -> . global block
    (5) block -> . empty
    (54) procedure -> . PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
    (14) global -> . assignment
    (150) empty -> .
    (19) assignment -> . identifier ASSIGN a_content SEMICOLON
    (20) assignment -> . identifier COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON
    (146) identifier -> . ID
    (147) identifier -> . consult
    (105) consult -> . list_consult
    (106) consult -> . mat_consult
    (107) consult -> . 3dmat_consult
    (108) list_consult -> . ID list_consultT
    (111) mat_consult -> . ID mat_consultT
    (116) 3dmat_consult -> . ID 3dmat_consultT

    PROCEDURE       shift and go to state 44
    MAIN            reduce using rule 150 (empty -> .)
    $end            reduce using rule 150 (empty -> .)
    ID              shift and go to state 47

    procedure                      shift and go to state 41
    block                          shift and go to state 81
    global                         shift and go to state 42
    empty                          shift and go to state 43
    assignment                     shift and go to state 45
    identifier                     shift and go to state 46
    consult                        shift and go to state 48
    list_consult                   shift and go to state 49
    mat_consult                    shift and go to state 50
    3dmat_consult                  shift and go to state 51

state 42

    (4) block -> global . block
    (3) block -> . procedure block
    (4) block -> . global block
    (5) block -> . empty
    (54) procedure -> . PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
    (14) global -> . assignment
    (150) empty -> .
    (19) assignment -> . identifier ASSIGN a_content SEMICOLON
    (20) assignment -> . identifier COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON
    (146) identifier -> . ID
    (147) identifier -> . consult
    (105) consult -> . list_consult
    (106) consult -> . mat_consult
    (107) consult -> . 3dmat_consult
    (108) list_consult -> . ID list_consultT
    (111) mat_consult -> . ID mat_consultT
    (116) 3dmat_consult -> . ID 3dmat_consultT

    PROCEDURE       shift and go to state 44
    MAIN            reduce using rule 150 (empty -> .)
    $end            reduce using rule 150 (empty -> .)
    ID              shift and go to state 47

    global                         shift and go to state 42
    block                          shift and go to state 82
    procedure                      shift and go to state 41
    empty                          shift and go to state 43
    assignment                     shift and go to state 45
    identifier                     shift and go to state 46
    consult                        shift and go to state 48
    list_consult                   shift and go to state 49
    mat_consult                    shift and go to state 50
    3dmat_consult                  shift and go to state 51

state 43

    (5) block -> empty .

    MAIN            reduce using rule 5 (block -> empty .)
    $end            reduce using rule 5 (block -> empty .)


state 44

    (54) procedure -> PROCEDURE . proc_dec LCORCH body RCORCH SEMICOLON
    (55) proc_dec -> . proc_name LPARENT parameter RPARENT
    (56) proc_name -> . ID

    ID              shift and go to state 85

    proc_dec                       shift and go to state 83
    proc_name                      shift and go to state 84

state 45

    (14) global -> assignment .

    PROCEDURE       reduce using rule 14 (global -> assignment .)
    ID              reduce using rule 14 (global -> assignment .)
    MAIN            reduce using rule 14 (global -> assignment .)
    $end            reduce using rule 14 (global -> assignment .)


state 46

    (19) assignment -> identifier . ASSIGN a_content SEMICOLON
    (20) assignment -> identifier . COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON

    ASSIGN          shift and go to state 86
    COMMA           shift and go to state 87


state 47

    (146) identifier -> ID .
    (108) list_consult -> ID . list_consultT
    (111) mat_consult -> ID . mat_consultT
    (116) 3dmat_consult -> ID . 3dmat_consultT
    (109) list_consultT -> . PARENTCL indice PARENTCR
    (110) list_consultT -> . PARENTCL indice TP indice PARENTCR
    (112) mat_consultT -> . PARENTCL indice COMMA indice PARENTCR
    (113) mat_consultT -> . PARENTCL TP COMMA indice PARENTCR
    (114) mat_consultT -> . PARENTCL TP PARENTCR list_consultT
    (115) mat_consultT -> . PARENTCL indice PARENTCR list_consultT
    (117) 3dmat_consultT -> . PARENTCL indice COMMA indice COMMA indice PARENTCR
    (118) 3dmat_consultT -> . PARENTCL indice PARENTCR mat_consultT

    ASSIGN          reduce using rule 146 (identifier -> ID .)
    COMMA           reduce using rule 146 (identifier -> ID .)
    NE              reduce using rule 146 (identifier -> ID .)
    LT              reduce using rule 146 (identifier -> ID .)
    GT              reduce using rule 146 (identifier -> ID .)
    LTE             reduce using rule 146 (identifier -> ID .)
    GTE             reduce using rule 146 (identifier -> ID .)
    COMPARE         reduce using rule 146 (identifier -> ID .)
    RPARENT         reduce using rule 146 (identifier -> ID .)
    STEP            reduce using rule 146 (identifier -> ID .)
    LCORCH          reduce using rule 146 (identifier -> ID .)
    DOT             reduce using rule 146 (identifier -> ID .)
    PARENTCL        shift and go to state 91

    list_consultT                  shift and go to state 88
    mat_consultT                   shift and go to state 89
    3dmat_consultT                 shift and go to state 90

state 48

    (147) identifier -> consult .

    ASSIGN          reduce using rule 147 (identifier -> consult .)
    COMMA           reduce using rule 147 (identifier -> consult .)
    NE              reduce using rule 147 (identifier -> consult .)
    LT              reduce using rule 147 (identifier -> consult .)
    GT              reduce using rule 147 (identifier -> consult .)
    LTE             reduce using rule 147 (identifier -> consult .)
    GTE             reduce using rule 147 (identifier -> consult .)
    COMPARE         reduce using rule 147 (identifier -> consult .)
    RPARENT         reduce using rule 147 (identifier -> consult .)
    STEP            reduce using rule 147 (identifier -> consult .)
    LCORCH          reduce using rule 147 (identifier -> consult .)


state 49

    (105) consult -> list_consult .
